Atualização do app. Subindo os fragments de resultado e calculo.

--- a/app/src/main/res/layout/fragment_calculo.xml
+++ b/app/src/main/res/layout/fragment_calculo.xml
@@ -47,7 +47,7 @@
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="Digite o seu peso. EX: 90.50"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:padding="16dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
@@ -66,7 +66,7 @@
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="Digite a sua altura. Ex: 1.78"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:padding="18dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
