Correção de uma palavra

--- a/app/src/main/res/layout/fragment_calculo.xml
+++ b/app/src/main/res/layout/fragment_calculo.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Vamos começar o calculo do seu IMC:"
+        android:text="Vamos começar o cálculo do seu IMC:"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
